--- a/src/map_path_plan/package.xml
+++ b/src/map_path_plan/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>map_path_plan</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <version>0.1.0</version>
+  <description>map_path_plan</description>
   <maintainer email="fun3545@gmail.com">strho</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
 
   <exec_depend>rclpy</exec_depend>
