--- a/src/tank_control/package.xml
+++ b/src/tank_control/package.xml
@@ -5,7 +5,7 @@
   <version>0.1.0</version>
   <description>tank_control_system</description>
   <maintainer email="fun3545@gmail.com">strho</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
