--- a/src/tank_gui/package.xml
+++ b/src/tank_gui/package.xml
@@ -5,7 +5,7 @@
   <version>0.1.0</version>
   <description>tank_gui</description>
   <maintainer email="fun3545@gmail.com">strho</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
