--- a/src/tank_package/package.xml
+++ b/src/tank_package/package.xml
@@ -5,7 +5,7 @@
   <version>0.1.0</version>
   <description>tank_package_main</description>
   <maintainer email="fun3545@gmail.com">strho</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <!-- ★ build tool 선언 -->
   <buildtool_depend>ament_python</buildtool_depend>
