--- a/src/yolo_detector_pkg/package.xml
+++ b/src/yolo_detector_pkg/package.xml
@@ -5,7 +5,7 @@
   <version>0.1.0</version>
   <description>YOLOv8 detector package</description>
   <maintainer email="fun3545@gmail.com">strho</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
